--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     ]
   },
   "dependencies": {
+    "classnames": "^2.3.2",
+    "daisyui": "^2.31.0",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
