--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "classnames": "^2.3.2",
     "daisyui": "^2.31.0",
+    "date-fns": "^2.29.3",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-countdown-circle-timer": "^3.0.9",
