--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     ]
   },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "classnames": "^2.3.2",
     "daisyui": "^2.31.0",
     "date-fns": "^2.29.3",
     "next": "12.2.5",
+    "prisma": "^4.4.0",
     "react": "18.2.0",
     "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "18.2.0"
