--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "classnames": "^2.3.2",
     "daisyui": "^2.31.0",
     "date-fns": "^2.29.3",
+    "firebase": "^9.10.0",
     "next": "12.2.5",
     "prisma": "^4.4.0",
     "react": "18.2.0",
     "react-countdown-circle-timer": "^3.0.9",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
