--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.4.0",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "classnames": "^2.3.2",
     "daisyui": "^2.31.0",
     "date-fns": "^2.29.3",
