--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react": "18.2.0",
     "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
